@@ -108,6 +108,10 @@
     <last>Green</last>
   </name>
   <name>
+    <first>Anthony</first>
+    <last>Wat</last>
+  </name>
+  <name>
     <first>Antoine</first>
     <last>Baudoux</last>
   </name>
