@@ -514,23 +514,23 @@ Target aTarget: started Thu Jan 22 09:01:00 CET 2009
 echo: started Thu Jan 22 09:01:00 CET 2009
      [echo] echo-task
 
-echo: finishedThu Jan 22 09:01:00 CET 2009 (250ms)
+echo: finished Thu Jan 22 09:01:00 CET 2009 (250ms)
 
 zip: started Thu Jan 22 09:01:00 CET 2009
       [zip] Building zip: ...\my.zip
 
-zip: finishedThu Jan 22 09:01:01 CET 2009 (1313ms)
+zip: finished Thu Jan 22 09:01:01 CET 2009 (1313ms)
 
-Target aTarget: finishedThu Jan 22 09:01:01 CET 2009 (1719ms)
+Target aTarget: finished Thu Jan 22 09:01:01 CET 2009 (1719ms)
 
 Target anotherTarget: started Thu Jan 22 09:01:01 CET 2009
 
 echo: started Thu Jan 22 09:01:01 CET 2009
      [echo] another-echo-task
 
-echo: finishedThu Jan 22 09:01:01 CET 2009 (0ms)
+echo: finished Thu Jan 22 09:01:01 CET 2009 (0ms)
 
-Target anotherTarget: finishedThu Jan 22 09:01:01 CET 2009 (0ms)
+Target anotherTarget: finished Thu Jan 22 09:01:01 CET 2009 (0ms)
 
 BUILD SUCCESSFUL
 Total time: 2 seconds
